2020-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-rt.pk (_pkl_exception_handler): fix typo in message.

2020-03-14  John Darrington <john@darrington.wattle.id.au>

	* doc/Makefile.am (pkgdata_DATA): New variable.
	* doc/Makefile.am (INFO_DEPS): Remove nodelist.
	* doc/Makefile.am (nodelist): Move to $(top_srcdir)/src,
	* src/pk-misc.c (doc_completion_dunction): Expect nodelist
	in poke_datadir instead of poke_infodir.

2020-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_type_defval): Add missing locations to
	built offsets.
	* testsuite/poke.pkl/attr-size-13.pk: New test.
	* testsuite/poke.pkl/attr-length-7.pk: Likewise.

2020-03-09  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am: Make files compiled by ras to depend on ras
	itself.

2020-03-09  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_mapper): Fix the handling of EOF while
	mapping unions.
	* testsuite/poke.map/maps-unions-9.pk: New test.
	* testsuite/poke.map/maps-unions-10.pk: Likewise.

2020-03-09  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_OPTCOND): Define.
	(struct pkl_ast_struct_type_field): New field optcond.
	* src/pkl-ast.c (pkl_ast_make_struct_type_field): Get an argument
	optcond.
	(pkl_ast_dup_type): Handle optcond.
	(pkl_ast_node_free): Likewise.
	(pkl_ast_type_is_complete): Struct types with optional fields are
	not complete.
	(pkl_ast_print_1): Likewise.
	* src/pkl-pass.c (pkl_do_pass_1): Traverse optcond nodes.
	* src/pkl-tab.y (struct_type_field_optcond): New rule.
	(struct_type_field): Add conditional expression.
	* src/pkl-anal.c (pkl_anal2_ps_type_struct): Optional fields are
	not allowed in unions.
	* src/pkl-typify.c (pkl_typify1_ps_struct_type_field): Make sure
	that optcond expressions in fields evaluate to a boolean.
	* src/pkl-promo.c (pkl_promo_ps_struct_type_field): Promote
	optcond expressions to boolean.
	* src/pkl-gen.pks (struct_mapper): Use the optcond expression in