@@ -1,3 +1,10 @@
+2020-03-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/pkl-ast.c (pkl_ast_type_defval): Handle unbounded arrays.
+	* src/pkl-pass.c (pkl_do_pass_1): An array AST node can have 0
+	elements.
+	* testsuite/poke.pkl/scons-31.pk: New test.
+
 2020-03-17  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* src/pkl-rt.pk (_pkl_exception_handler): fix typo in message.
